# unrealscript-debugger

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yaml  ci.yaml  test.yaml
crates/adapter/: Cargo.toml
crates/adapter/src/: adapter.rs  async_client.rs  client.rs  client_config.rs  comm.rs  connected_adapter.rs  disconnected_adapter.rs  lib.rs  main.rs  util.rs  variable_reference.rs
crates/adapter/src/comm/: tcp.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/dap/: Cargo.toml
crates/dap/src/: events.rs  lib.rs  requests.rs  responses.rs  types.rs
crates/interface/: Cargo.toml
crates/interface/src/: api.rs  debugger.rs  lib.rs  lifetime.rs  stackhack.rs
crates/interface/src/interface/: debugger.rs
extensions/vscode/: package.json
extensions/vscode/src/: extension.ts
integration_tests/: Cargo.toml  breakpoints.rs  log.rs  variables.rs  version.rs
integration_tests/fixture/: mod.rs
src/: adapter.rs  client.rs  interface.rs  lib.rs  main.rs
src/interface/: debugger.rs
tests/: breakpoints.rs
xtask/: Cargo.toml
xtask/src/: main.rs
