[package]
name = "tests"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
common.workspace = true
adapter.workspace = true
interface.workspace = true
dap = { git = "https://github.com/tracktwo/dap-rs", branch = "mods" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipmpsc = "0.5"

[[test]]
name="breakpoints"
path="breakpoints.rs"
