[package]
name = "tests"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
common.workspace = true
adapter.workspace = true
interface.workspace = true
dap = { path = "../../dap-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipmpsc = "0.5"
tokio = { version = "1", features = ["full"] }

[[test]]
name="breakpoints"
path="breakpoints.rs"


[[test]]
name="log"
path="log.rs"

[[test]]
name="variables"
path="variables.rs"

