[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
common.workspace = true
adapter.workspace = true
interface.workspace = true
dap.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
flexi_logger = "0.24"
log = "0.4"

[[test]]
name="breakpoints"
path="breakpoints.rs"


[[test]]
name="log"
path="log.rs"

[[test]]
name="variables"
path="variables.rs"

[[test]]
name="version"
path="version.rs"

