[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
flexi_logger = "0.25.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "1.0"
bit_field = "0.10"
memmem = "0.1"
bytes = "1.4"
common.workspace = true
interface.workspace = true
dap.workspace = true
pkg-version = "1.0.0"


[[bin]]
path = "src/main.rs"
name = "adapter"
