[package]
name = "adapter"
version = "0.1.1"
edition = "2021"

[dependencies]
flexi_logger = "0.25.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bit_field = "0.10"
common.workspace = true
interface.workspace = true
dap.workspace = true
pkg-version = "1.0.0"


[[bin]]
path = "src/main.rs"
name = "adapter"
