[package]
name = "interface"
version = "0.0.0"
edition = "2021"

[dependencies]
flexi_logger = "0.24"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipmpsc = "0.5"
mio = "0.8"
thiserror = "1.0"
textcode = "0.2"
common.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
