[package]
name = "interface"
version = "0.1.1"
edition = "2021"

[dependencies]
flexi_logger = "0.25.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "1.0"
common.workspace = true
pkg-version = "1.0.0"
winapi = { version = "0.3.9", features = [ "libloaderapi", "stringapiset" ] }

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
